--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
                     <img src="./images/pushpa.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/ntr.jpg" alt=""> // The alt attribute specifies an alternate text for an area, if the image cannot be displayed.
+                    <img src="./images/ntr.jpg" alt=""> // The alt attribute specifies an alternate text for an area, if the image cannot be displayed.
                 </div>
                 <div class="image">
-                    <img src="./Images/b1.jpg" alt="">
+                    <img src="./images/b1.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/b3.jpg" alt="">
+                    <img src="./images/b3.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/samp.jpg" alt="">
+                    <img src="./images/samp.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/samp2.jpg" alt="">
+                    <img src="./images/samp2.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/animal-world.ZW1zLXByZC1hc3NldHMvbW92aWVzL2JjNTBhMTY4LTczZTItNGQxZi05ZmUxLWQwN2ZlNThiZGVkYi53ZWJw" alt="">
+                    <img src="./images/animal-world.ZW1zLXByZC1hc3NldHMvbW92aWVzL2JjNTBhMTY4LTczZTItNGQxZi05ZmUxLWQwN2ZlNThiZGVkYi53ZWJw" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/bao.jpg.crdownload" alt="">
+                    <img src="./images/bao.jpg.crdownload" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/the-mermaid.jpg" alt="">
+                    <img src="./images/the-mermaid.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/boss-baby.jpg" alt="">
+                    <img src="./images/boss-baby.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/prab.jpg" alt="">
+                    <img src="./images/prab.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./Images/Over_the_Moon2020.jpg" alt="">
+                    <img src="./images/Over_the_Moon2020.jpg" alt="">
                 </div>
                 <div class="image">
                     <img src="./Images/babu.jpg" alt="">
