--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
         <marquee behavior="alternate" direction="right" scrollamount="19.4"scrolldelay="3"> // marquee - it defines a scrolling area in the HTML document that moves across the page any direction.
             <div class="group1">
                 <div class="image">
-                    <img src="./images/pushpa.jpg" alt="">
+                    <img src="pushpa.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/ntr.jpg" alt=""> // The alt attribute specifies an alternate text for an area, if the image cannot be displayed.
+                    <img src="ntr.jpg" alt=""> // The alt attribute specifies an alternate text for an area, if the image cannot be displayed.
                 </div>
                 <div class="image">
-                    <img src="./images/b1.jpg" alt="">
+                    <img src="b1.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/b3.jpg" alt="">
+                    <img src="b3.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/samp.jpg" alt="">
+                    <img src="samp.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/samp2.jpg" alt="">
+                    <img src="samp2.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/animal-world.ZW1zLXByZC1hc3NldHMvbW92aWVzL2JjNTBhMTY4LTczZTItNGQxZi05ZmUxLWQwN2ZlNThiZGVkYi53ZWJw" alt="">
+                    <img src="animal-world.ZW1zLXByZC1hc3NldHMvbW92aWVzL2JjNTBhMTY4LTczZTItNGQxZi05ZmUxLWQwN2ZlNThiZGVkYi53ZWJw" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/bao.jpg.crdownload" alt="">
+                    <img src=".jpg.crdownload" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/the-mermaid.jpg" alt="">
+                    <img src=".jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/boss-baby.jpg" alt="">
+                    <img src="boss-baby.jpg" alt="">
                 </div>
                 <div class="image">
-                    <img src="./images/prab.jpg" alt="">
+                    <img src="prab.jpg" alt="">
                 </div>
                 <div class="image">
                     <img src="./images/Over_the_Moon2020.jpg" alt="">
